# SnowyOwl

./: .gitignore  README.md
bridges/sbus_bridge/include/sbus_bridge/: channel_mapping.h  thrust_mapping.h
bridges/sbus_bridge/launch/: sbus_bridge.launch
bridges/sbus_bridge/parameters/: default.yaml  race_quad.yaml  snowyowl_sbus_bridge.yaml
bridges/sbus_bridge/src/: sbus_msg.cpp  sbus_serial_port.cpp  thrust_mapping.cpp
control/autopilot/parameters/: snowyowl_ap.yaml
control/position_controller/parameters/: snowyowl_pc.yaml
fly_scripts/: arm.py  force_hover.py  land.py  off.py  pose_command.py  start.py  state_estimate.py
neural_network/: README.md  neural_network.py  setup.py
neural_network/UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
neural_network/rl/lxx_baselines/ppo/: ppo2.py
quad_launch_files/launch/: hummingbird_sim.launch  n_hummingbird_sim.launch  n_snowyowl.launch  real_quad_example.launch  snowyowl.launch
snowyowl3/fly_scripts/: arm.py  force_hover.py  land.py  off.py  pose_command.py  start.py  state_estimate.py
snowyowl3/neural_network/: README.md  neural_network_real.py  neural_network_sim.py  setup.py
snowyowl3/neural_network/rl/lxx_baselines/common/: policies.py
snowyowl3/snowyowl_launch_files/: CMakeLists.txt  package.xml
snowyowl3/snowyowl_launch_files/launch/: gazebo_simulation_flight.launch  real_world_flight.launch
snowyowl3/snowyowl_launch_files/parameters/: snowyowl3_autopilot.yaml  snowyowl3_rotors_interface.yaml  snowyowl3_sbus_bridge.yaml
